--- a/en-US/700.reference/500.system-reference/400.system-overview-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
+++ b/en-US/700.reference/500.system-reference/400.system-overview-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
@@ -30,7 +30,7 @@ This topic describes the performance views of OceanBase Database in detail.
 | [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/5400.v-ob_transaction_participants-of-mysql-mode.md) | Displays the information about the transaction participants on all OBServer nodes.  |
 | [V$STATNAME](../300.performance-view-of-mysql-mode/5600.v-statname-of-mysql-mode.md) | Displays definitions related to all the statistical events.  |
 | [V$EVENT_NAME](../300.performance-view-of-mysql-mode/5700.v-event_name-of-mysql-mode.md) | Displays the definitions of all statistical events on the current OBServer node.  |
-| [v$V$SESSION_WAIT](../300.performance-view-of-mysql-mode/5900.v-session_wait-of-mysql-mode.md) | Displays detailed information about the current wait events in each session. Each wait event has three parameters.  |
+| [V$SESSION_WAIT](../300.performance-view-of-mysql-mode/5900.v-session_wait-of-mysql-mode.md) | Displays detailed information about the current wait events in each session. Each wait event has three parameters.  |
 | [V$SESSION_WAIT_HISTORY](../300.performance-view-of-mysql-mode/6000.v-session_wait_history-of-mysql-mode.md) | Displays the latest 10 wait events of all sessions on the current OBServer.  |
 | [V$SESSTAT](../300.performance-view-of-mysql-mode/6100.v-sesstat-of-mysql-mode.md) | Displays an overview of session-level statistical events.  |
 | [V$SYSSTAT](../300.performance-view-of-mysql-mode/10600.v-sysstat-of-mysql-mode.md) | Displays information about tenant-level statistical events on the current server.  |
