--- a/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
@@ -30,7 +30,7 @@
 | [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/5400.v-ob_transaction_participants-of-mysql-mode.md)    | 展示所有 OBServer 节点上活跃事务的参与者信息。                                  |
 | [V$STATNAME](../300.performance-view-of-mysql-mode/5600.v-statname-of-mysql-mode.md)                       | 用于展示所有统计事件的相关定义。                                          |
 | [V$EVENT_NAME](../300.performance-view-of-mysql-mode/5700.v-event_name-of-mysql-mode.md)                     | 当前 OBServer 节点上所有统计事件的相关定义。                                 |
-| [v$V$SESSION_WAIT](../300.performance-view-of-mysql-mode/5900.v-session_wait-of-mysql-mode.md)                   | 每个 Session 当前等待事件明细，按照约定，每个等待事件会有三个参数，各自会记录对应的值。          |
+| [V$SESSION_WAIT](../300.performance-view-of-mysql-mode/5900.v-session_wait-of-mysql-mode.md)                   | 每个 Session 当前等待事件明细，按照约定，每个等待事件会有三个参数，各自会记录对应的值。          |
 | [V$SESSION_WAIT_HISTORY](../300.performance-view-of-mysql-mode/6000.v-session_wait_history-of-mysql-mode.md)           | 每个 Session 当前等待事件明细，最近 10 次等待事件。                          |
 | [V$SESSTAT](../300.performance-view-of-mysql-mode/6100.v-sesstat-of-mysql-mode.md)                        | 展示 Session 级别的统计事件概况。                                     |
 | [V$SYSSTAT](../300.performance-view-of-mysql-mode/10600.v-sysstat-of-mysql-mode.md)                        | 展示当前服务器上租户级别的统计事件信息。                                              |
