--- a/zh-CN/700.reference/500.system-reference/700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/700.error-code-of-oracle-mode/200.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -152,7 +152,7 @@ ORA-00060：deadlock detected while waiting for resource
 
 * 解决方式：一个集群不支持同时配置多个仲裁服务。
 
-## EORA-00600: wait degration finished timeout
+## ORA-00600: wait degration finished timeout
 
 * OceanBase 错误码：4751
 
