--- a/zh-CN/800.FAQ/600.cluster-management.md
+++ b/zh-CN/800.FAQ/600.cluster-management.md
@@ -114,7 +114,7 @@ Clog 滑动窗口（Sliding Window) 满主要分为下面两种情况：
 
 | Clog 滑动窗口满掉场景 | 后果及关键日志 |
 | --- | --- |
-| Leader 分区的 Clog 滑动窗口满 | Leader 分区无法再继续分配 `log_id`给事务层,并且会在 observer.log 中打印 `submit log error.*\\-4023` 消息。如果 Leader 的 Clog 滑动窗口出现满掉且持续没有自动缓解掉的情况，会导致事务提交无法再将请求放入到 Clog 滑动窗口，导致事务的响应时间（RT）这整体升高的问题。 |
+| Leader 分区的 Clog 滑动窗口满 | Leader 分区无法再继续分配 `log_id`给事务层,并且会在 observer.log 中打印 `submit log error.*\\-4023` 消息。如果 Leader 的 Clog 滑动窗口出现满掉且持续没有自动缓解掉的情况，会导致事务提交无法再将请求放入到 Clog 滑动窗口，导致事务的响应时间（RT）值整体升高的问题。 |
 | Follower 分区的 Clog 滑动窗口满 | Follower 分区会暂停接收 Leader 发过来的 Clog，并且会在 observer.log 中打印 `check_can_receive_log, now can not recieve log` 消息，直至有 Clog 从窗口中滑出。如果长时间的 Follower 节点滑动窗口满掉且没有自动缓解，会影响多数派的 Clog 提交，进而会影响事务提交。如影响了少数派的 Clog 提交，会导致 Follower 节点的 Clog 一直落后。如果 Follower 的 Clog 持续落后那么在其他少数派副本出现故障的时候，会影响该副本不能被有限选举为 Leader 副本。 |
 
 从整体上来说，如果 Clog 滑动窗口满了，会影响 Clog 的持久化的推进。这种情况下，应用端会感受到 `slow trans` 或者"锁等待"（日志中会出现 `-6005` 和 `lock_for_write conflict.*\-4023`）等问题，性能也会受到明显影响。分析的思路有如下几种:
