--- a/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -1000,7 +1000,7 @@ ORA-39962: invalid parameter for PLSQL_CCFLAGS
 
 <main id="notice" type='explain'>
   <h4>Note</h4>
-  <p>This error code is modified since OceanBase Database V4.1.0. Specifically, the error message is changed from <code>ORA-00600：Invalid JSON path expression </code> to <code>ORA-40442：JSON path expression syntax error ('INT')</code>. </p>
+  <p>This error code is modified since OceanBase Database V4.1.0. Specifically, the error message is changed from <code>ORA-00600: Invalid JSON path expression </code> to <code>ORA-40442: JSON path expression syntax error ('INT')</code>. </p>
 </main>
 
 ## ORA-40442: JSON path expression syntax error ('INT').JSON path expression syntax error ('%s')
