--- a/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/en-US/700.reference/500.system-reference/700.error-code-of-oracle-mode/900.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -1337,7 +1337,7 @@ ORA-39962: invalid parameter for PLSQL_CCFLAGS
   <p>This error code is introduced since OceanBase Database V4.1.0. </p>
 </main>
 
-## ORA-40597: JSON path expression syntax error ('%.*s')
+<!-- ## ORA-40597: JSON path expression syntax error ('%.*s')
 
 * Error code in OceanBase Database: 5454
 * SQLSTATE: 42000
@@ -1346,7 +1346,7 @@ ORA-39962: invalid parameter for PLSQL_CCFLAGS
 <main id="notice" type='explain'>
   <h4>Note</h4>
   <p>This error code is introduced since OceanBase Database V4.1.0. </p>
-</main>
+</main> -->
 
 ## ORA-40629: Patch specification is not valid JSON
 
