--- a/zh-CN/600.manage/500.security-and-permissions/300.access-control/200.user-and-permission/200.permission-of-mysql-mode/100.permission-classification-of-mysql.md
+++ b/zh-CN/600.manage/500.security-and-permissions/300.access-control/200.user-and-permission/200.permission-of-mysql-mode/100.permission-classification-of-mysql.md
@@ -24,34 +24,34 @@ MySQL 模式的权限分为了 3 个级别：
 |  对象权限  | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
 |  对象权限  | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
 |  对象权限  | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-| 数据库级权限                 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
-| 数据库级权限                 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
-| 数据库级权限                 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
-| 数据库级权限                 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
-| 数据库级权限                 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
-| 数据库级权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
-| 数据库级权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
-| 数据库级权限                 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
-| 数据库级权限                 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
-| 数据库级权限                 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-|  用户级权限 | CREATE                 | 确定用户是否可以创建数据库、表组和表。                                                                    |
-|  用户级权限 | ALTER                  | 确定用户是否可以修改表组、重命名和修改表结构。                                                                  |
-|  用户级权限 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
-|  用户级权限 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
-|  用户级权限 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
-|  用户级权限 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
-|  用户级权限 | DROP                   | 确定用户是否可以删除现有数据库、表组、表和视图。                                                               |
-|  用户级权限 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
-|  用户级权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
-|  用户级权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-|  用户级权限 | ALTER TENANT           | 修改租户信息的权限。                                                                          |
-|  用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
-|  用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
-|  用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
-|  用户级权限 | CREATE DATABASE LINK   | 创建数据库链接的权限。                                                                     |
-|  用户级权限 | DROP DATABASE LINK     | 删除数据库链接的权限。                                                                    |
-|  用户级权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
-|  用户级权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
-|  用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。      |
-|  用户级权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
-|  用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过 `KILL` 命令删除用户进程，使用 `SET GLOBAL` 修改全局 MySQL 变量，执行关于复制和日志的各种命令。
+| 数据库权限                 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+| 数据库权限                 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+| 数据库权限                 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+| 数据库权限                 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+| 数据库权限                 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
+| 数据库权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
+| 数据库权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+| 数据库权限                 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
+| 数据库权限                 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+| 数据库权限                 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+|  管理权限 | CREATE                 | 确定用户是否可以创建数据库、表组和表。                                                                    |
+|  管理权限 | ALTER                  | 确定用户是否可以修改表组、重命名和修改表结构。                                                                  |
+|  管理权限 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+|  管理权限 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+|  管理权限 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+|  管理权限 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+|  管理权限 | DROP                   | 确定用户是否可以删除现有数据库、表组、表和视图。                                                               |
+|  管理权限 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+|  管理权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+|  管理权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+|  管理权限 | ALTER TENANT           | 修改租户信息的权限。                                                                          |
+|  管理权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
+|  管理权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
+|  管理权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
+|  管理权限 | CREATE DATABASE LINK   | 创建数据库链接的权限。                                                                     |
+|  管理权限 | DROP DATABASE LINK     | 删除数据库链接的权限。                                                                    |
+|  管理权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
+|  管理权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
+|  管理权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。      |
+|  管理权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
+|  管理权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过 `KILL` 命令删除用户进程，使用 `SET GLOBAL` 修改全局 MySQL 变量，执行关于复制和日志的各种命令。
