--- a/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/200.sql_diagnoser-development-guide.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/200.sql_diagnoser-development-guide.md
@@ -1,62 +1,45 @@
 # 使用 SQL Diagnoser
 
-本文为您介绍 SQL Diagnoser 的使用方法。包括一键诊断、调整诊断规则、关闭 SQL Diagnoser 等操作。
+本文为您介绍 SQL Diagnoser 的使用方法。包括租户 SQL 诊断、SQL Review、关闭 SQL Diagnoser 等操作。
 
-## 一键诊断
+## 租户 SQL 诊断
 
-您可在 SQL Diagnoser 首页通过 **一键诊断** 功能对 SQL 进行快速诊断。该功能具体字段说明如下。
+您可在 SQL Diagnoser 首页通过 **租户SQL诊断** 功能直接分析业务集群的运行过的 SQL，找出常见的可疑 SQL，从而帮助用户找到隐藏性能问题，给出优化建议。该功能具体填充字段说明如下。
 
 |                              输入框                              |                                  描述                                  |是否必填|
 |-----------------------------------------------------------------|------------------------------------------------------------------------|-------|
-| Ip address          | IP 地址。 |   是   |
+| Ip Address          | IP 地址。 |   是   |
 | Port         | 端口。                |   是   |
-| 系统租户密码          | 系统租户的密码。                         |  是 |
+| 用户名          | 租户的用户名                         |  是 |
+| 租户密码          | 租户登录密码。                         |  是 |
 | 集群名          | 如果是通过 OBProxy 连接的集群，则必须填写，否则将无法连接集群。                                             |   否   |
 | 开始时间      | 表示获取从该时间点开始的 SQL 执行记录诊断。                                     |   是    |
+| 采样数      | 表示从 sql_audit 视图中查询的记录条数，默认值10000                                     |   否    |
 | 结束时间       | 表示获取截至到该时间点的 SQL 执行记录诊断。若诊断速度较慢，建议缩小查询范围后重试。                                      |   是   |
-| 租户名      | 表示需要诊断的租户。若不填，则诊断所有租户。</br>支持配置多个租户，租户名之间使用英文逗号分隔，如：tenant1、tenant2。                              |  否  |
-| 响应时间       | 响应时间阈值，表示响应时间超过该值的 SQL 执行记录才会被诊断，单位为 us，默认值为 10000 us。当诊断接口过慢时，可以调高该阈值。                                |   否   |
+| 响应时间       | 响应时间阈值，表示响应时间超过该值的 SQL 执行记录才会被诊断，单位为 us，默认值为 20000 us。当诊断接口过慢时，可以调高该阈值。                                |   否   |
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
   <ol>
-    <li>诊断规则和诊断结果中关于时间的属性都未做单位处理，实际与 <code>gv$ob_sql_audit</code> 中的原始单位一致。比如 elapsed_time 单位为 us，CPU 时间由<code>execution_time + get_plan_time - total_wait_time_micro</code> 计算而来，单位同样为 us。</li>
+    <li>诊断规则和诊断结果中关于时间的属性都未做单位处理，实际与 <code>gv$ob_sql_audit</code> (OceanBase 数据库 V4.0 及以前版本<code>gv$sql_audit</code>)中的原始单位一致。比如 <code>elapsed_time</code> 单位为 us，CPU 时间由<code>execution_time + get_plan_time - total_wait_time_micro</code> 计算而来，单位同样为 us。</li>
     <li>SQL Diagnoser 第一次启动时，会在当前用户主目录下创建文件夹 <code>h2</code>及其相关数据文件，若删除这些文件，诊断规则会重置。若想持久化对诊断规则的修改，请不要移动、修改或删除这些文件。</li>
     <li>诊断默认过滤掉 OceanBase 数据库（OceanBase 数据库部署后默认创建名为 oceanbase 的数据库），请不要在该数据库下测试本工具功能。</li>
-    <li>为降低诊断对系统租户的压力及降低工具本身的负载，每次诊断最多从 <code>gv$ob_sql_audit</code> 中提取 10000 条数据（按响应时间倒序），因此不能进行全量诊断。若想调整诊断数据量，建议以接口调用的方式指定最大返回行数 <code>queryLimit</code>； 或者在启动本工具时，设置环境变量 <code>sql.diagnose.sql.query-sql-audit-limit</code>，如 <code>nohup java -Dsql.diagnose.sql.query-sql-audit-limit=12345 -Dserver.port=9090 -jar sql-diagnoser-4.2.0.0.jar &</code>。</li>
+    <li>为降低诊断对系统租户的压力及降低工具本身的负载，每次诊断最多从 <code>gv$ob_sql_audit</code> (OceanBase 数据库 V4.0 及以前版本<code>gv$sql_audit</code>)中提取 10000 条数据（按响应时间倒序），因此不能进行全量诊断。若想调整诊断数据量，建议以接口调用的方式指定最大返回行数 <code>queryLimit</code>； 或者在启动本工具时，设置环境变量 <code>sql.diagnose.sql.query-sql-audit-limit</code>，如 <code>nohup java -Dsql.diagnose.sql.query-sql-audit-limit=12345 -Dserver.port=9090 -jar sql-diagnoser-4.2.0.0.jar &</code>。</li>
   </ol>
 </main>
 
-## 自定义诊断项规则
+## SQL Review
 
-SQL Diagnoser 除 [内置诊断项](../300.sql_diagnoser-paramenters/100.sql_diagnoser-diagnoser-items.md) 外，还内置了一个 H2 数据库，您可在数据库中调整或者自定义诊断项规则。
+SQL Review 功能可以通过简洁的白屏操作，用户在白屏输入想要 Review 的 SQL 文本，工具根据常见的规则项帮助用户分析 SQL 语句是否合理，并给出改进建议。字段填写说明如下：
+|                              输入框                              |                                  描述                                  |是否必填|
+|-----------------------------------------------------------------|------------------------------------------------------------------------|-------|
+| 连接地址          | IP 地址。 |   是   |
+| Port         | 端口。                |   是   |
+| 用户名          | 租户的用户名                         |  是 |
+| 租户密码          | 租户登录密码。                         |  是 |
+| SQL文本框       | 输入你想要检查的SQL                              |   是   |
 
-1. 通过 Web Console 连接该数据库，数据库地址为 `http://ip:port/h2-console` 。
-   如 SQL Diagnoser 的部署地址为 `http://10.10.0.1:8080` ，则内置数据库的地址为 `http://10.10.0.1:8080/h2-console` 。
-
-    <main id="notice" type='notice'>
-      <h4>注意</h4>
-      <p>登录界面除默认值外，JDBC URL 为 <code>jdbc:h2:mem:e2ad8a5e-5f26-496c-9cfe-b528aa79****</code>，用户名为 <code>sa</code> ，无需输入密码，直接登录即可。</p>
-    </main>
-
-2. 连接 Web Console 后，找到 `diagnose_rule` 表，可以看到该表内置的诊断项规则。您可对诊断项规则进行修改。
-
-    诊断项规则各字段描述如下。
-
-    |                              列名                              |                                  描述                                  |
-    |--------------------------------------------------------------|----------------------------------------------------------------------|
-    | NAME          | 诊断规则名。 |
-    | EXPRESSION         | 诊断规则表达式，该表达式需要返回布尔值，具体语法详见 [诊断规则表达式](../300.sql_diagnoser-paramenters/200.sql_diagnoser-expression.md) 。                |
-    | TYPE          | 诊断规则类型，目前仅支持 **SINGLE**，表示诊断对象是一条 sql_audit 记录。                         |
-    | WINDOW_SIZE          | 暂未用到。                                             |
-    | CONTEXT_VALUES         | 诊断后返回结果中封装的 **属性名-表达式** 键值对，表示关注的诊断上下文属性，及用户接口调用者提取关注的属性值。</br>如 CONTEXT_VALUES 为 `{"cpuTime":"$executeTime + $getPlanTime - $totalWaitTimeMicro"}`， 返回结果的 `contextValues` 属性为 `{"cpuTime":100}`。                                               |
-    | TEMPLATE       | 诊断结果描述模板，程序会将模板中的表达式转化成对应的值。</br>如 "CPU 时间为：`{$executeTime + $getPlanTime - $totalWaitTimeMicro}`" 被转换为 "CPU 时间为： 100"。                                      |
-    | DESCRIPTION      | 诊断项描述。                                |
-    | ENABLED       | 是否开启该诊断项，0 表示关闭， 1 表示开启。                                |
-
-3. 查看诊断上下文。
-每条 SQL 的执行计划，会被封装为一个诊断上下文，其具有的属性可以参考 **诊断上下文**（大部分属性与 `gv$sql_audit` 对应，您可以单击 **Example Value** 旁的 **Schema** 查看属性描述）。
-诊断上下文地址为 `http://ip:port/swagger-ui/index.html#/test-controller/diagnoseContextUsingGET`，其中 `ip:port` 为 SQL Diagnoser 的部署地址。
+SQL 文本框里边输入的 SQL 进行检测是通过静态规则以及连接 OceanBase 数据库去查询一些内部视图来完成的，所以需要输入 OceanBase 数据库的连接信息（包括实际的要检测的数据库），检查过程中并不会去实际执行该文本框的 SQL，所以可放心使用 SQL Review 功能。
 
 ## 关闭 SQL Diagnoser
 
