--- a/zh-CN/700.reference/1500.command-line-tools/1100.cdc/300.oblogproxy/200.configuration-file.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1100.cdc/300.oblogproxy/200.configuration-file.md
@@ -14,7 +14,7 @@ oblogproxy 的配置文件默认放在 `conf/conf.json` 中。您只需要关心
 | read_wait_num                | 20000   | 数据读取队列批次等待数量                |
 | send_timeout_us              | 2000000 | 发送数据包超时，单位：微秒               |
 | send_fail_interval_us        | 1000000 | 发送数据包失败重试等待周期，单位：微秒         |
-| command_timeout_s            | 10      | 命令执行超时，单位：微妙                |
+| command_timeout_s            | 10      | 命令执行超时，单位：微秒                |
 | log_quota_size_mb            | 5120    | 日志文件总大小阈值，单位：MB             |
 | log_quota_day                | 30      | 日志文件存储时间阈值，单位：天             |
 | log_gc_interval_s            | 43200   | 日志文件清理周期，单位：秒               |
