--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/100.built-in-data-types-of-oracle-mode/400.date-time-and-interval-data-types-of-oracle-mode/500.timestamp-with-local-time-zone-data-type-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/100.built-in-data-types-of-oracle-mode/400.date-time-and-interval-data-types-of-oracle-mode/500.timestamp-with-local-time-zone-data-type-of-oracle-mode.md
@@ -10,7 +10,7 @@ TIMESTAMP [(scale)] WITH LOCAL TIME ZONE
 
 ## 参数
 
-`TIMESTAMP [(scale)]` 的阈值和精确度取决于 `scale` 的值，取值范围为 \[0,9\]。最大值为 9（纳秒），最小值为 0（秒），默认值为 6（微妙）。
+`TIMESTAMP [(scale)]` 的阈值和精确度取决于 `scale` 的值，取值范围为 \[0,9\]。最大值为 9（纳秒），最小值为 0（秒），默认值为 6（微秒）。
 
 ## 使用说明
 
