--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/600.short-sql.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/600.short-sql.md
@@ -19,7 +19,7 @@ SELECT * FROM T1 WHERE C1 = 1;
 
 ## 查询短查询
 
-定位这类慢查询，需要进行一些聚合统计，统计一类查询的整体资源消耗。在 OceanBase 数据库中，可以利用 `gv$sql_audit` 这个视图去发掘这类慢查询。典型的诊断 SQL 如下：
+定位这类慢查询，需要进行一些聚合统计，统计一类查询的整体资源消耗。在 OceanBase 数据库中，可以利用 `GV$OB_SQL_AUDIT` 视图去发掘这类慢查询。典型的诊断 SQL 如下：
 
 以下查询统计的是某一类 SQL 按照读行量排序前 10 的请求。如果发现排在最前的几个请求整体读行量明显高出了 1~2 个数量级。那么这些请求优化的价值就会非常高。如果可以优化这些请求的执行计划，整体可以得到非常大的收益。
 
