--- a/zh-CN/600.manage/400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/600.optimize-log-synchronization-performance.md
+++ b/zh-CN/600.manage/400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/600.optimize-log-synchronization-performance.md
@@ -23,7 +23,7 @@
 
    <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>对于小规模租户（内存为 2C、4C 的租户），建议使用默认值，不要调整该配置项的值。</p>
+   <p>对于小规模租户（ CPU 为 2C、4C 的租户），建议使用默认值，不要调整该配置项的值。</p>
    </main>
 
    如果确认备租户与恢复源之间的带宽足够，可以尝试提高并发度。恢复源的介质为 NFS 的情况下，`log_restore_concurrency` 设置为 `5` 可以满足绝大多数场景。
