--- a/zh-CN/600.manage/500.security-and-permissions/300.access-control/200.user-and-permission/300.permission-of-oracle-mode/300.delegation-of-authority-of-oracle-mode.md
+++ b/zh-CN/600.manage/500.security-and-permissions/300.access-control/200.user-and-permission/300.permission-of-oracle-mode/300.delegation-of-authority-of-oracle-mode.md
@@ -47,15 +47,15 @@
     obclient > GRANT SELECT ON sys.test TO C ;
     ```
 
+    如果在给 B 用户授权时没有带 `with grant option` 参数，则使用 B 用户对 C 用户转授相同权限时会提示如下报错：
+
+    ```shell
+    obclient > GRANT SELECT on sys.test TO C ;
+    ORA-01031: insufficient privileges
+    ```
+
 7. 切换到 C 用户，发现可以查询 test 表，权限转授成功。
 
     ```shell
     obclient > SELECT * FROM sys.test；
     ```
-
-如果在给 A 用户授权时没有带 `with grant option` 参数，则使用 A 用户对 C 用户转授相同权限时会提示如下报错：
-
-```shell
-obclient > GRANT SELECT on sys.test TO C ;
-ORA-01031: insufficient privileges
-```
