--- a/zh-CN/100.learn-more-about-oceanbase/200.differences-between-enterprise-edition-and-community-edition.md
+++ b/zh-CN/100.learn-more-about-oceanbase/200.differences-between-enterprise-edition-and-community-edition.md
@@ -36,7 +36,7 @@ OceanBase 数据库提供企业版和社区版两种形态。
 |高性能   | 复杂查询优化改写        | 支持       | 支持            |
 |高性能   | 并行执行引擎            | 支持       | 支持            |
 |高性能   | 向量化引擎              | 支持       | 支持            |
-|高性能   | 高级执行计划管理（SPM，ACS）| 支持    | 不支持          |
+|高性能   | 高级执行计划管理（SPM）| 支持    | 不支持          |
 |高性能   | 小规格                  | 支持       | 支持            |
 |高性能   | 基于 Paxos 协议的日志传输| 支持       | 支持            |
 |高性能   | 分布式强一致事务、完整 ACID、支持多版本| 支持| 支持       |
