--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
@@ -25,7 +25,7 @@ table_definition:
             [index_name] index_desc 
             REFERENCES reference_definition 
             [match_action][opt_reference_option_list]
-    | {INDEX | KEY} [index_name] [index_type] (key_part,...)
+    | [SPATIAL] {INDEX | KEY} [index_name] [index_type] (key_part,...)
       [index_optionn_list] 
     | [CONSTRAINT [constraint_name]] CHECK(expression) constranit_state
 
@@ -142,7 +142,7 @@ partition_count | subpartition_count:
 | PRIMARY KEY                                          | 为创建的表指定主键。如果不指定，则使用隐藏主键。 特别地，OceanBase 数据库不支持修改表的主键或通过 `ALTER TABLE` 语句为表添加主键，因此推荐您在创建表时指定好表的主键。   |
 | FOREIGN KEY                                          | 为创建的表指定外键。如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。    |
 | KEY \| INDEX                                         | 为创建的表指定键或索引。 如果不指定索引名，则会使用索引引用的第一列作为索引名，如果命名存在重复，则会使用下划线（_）+ 序号的方式命名。（例如，使用 `c1` 列创建的索引如果命名重复，则会将索引命名为 `c1_2`。） 您可以通过 `SHOW INDEX` 语句查看表上的索引。    |
-| key_part        | 创建（函数）索引。 |
+| key_part        | 定义所创建的索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
 | expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<main id="notice" type='notice'><h4>注意</h4><p> OceanBase 数据库当前版本禁止创建生成列上的函数索引。 </p></main>              |
 | ROW_FORMAT                                           | 指定表是否开启 Encoding 存储格式。 <ul><li> `redundant`：不开启 Encoding 存储格式。   <li> `compact`：不开启 Encoding 存储格式。</li>   <li> `dynamic`：Encoding 存储格式。   <li> `compressed`：Encoding 存储格式。</li>   <li> `default`：等价 `dynamic` 模式。</li></ul>    |
@@ -194,6 +194,21 @@ partition_count | subpartition_count:
   KEY `i1` ((`c1` + 1)) BLOCK_SIZE 16384 LOCAL
   ) DEFAULT CHARSET = utf8mb4 ROW_FORMAT = DYNAMIC COMPRESSION = 'zstd_1.3.8' REPLICA_NUM = 2 BLOCK_SIZE = 16384 USE_BLOOM_FILTER = FALSE TABLET_SIZE = 134217728 PCTFREE = 0 |
   +-------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+  ```
+
+* 在创建表 `t1_g` 时，同时添加空间索引 `t1_g_idx1`。
+
+  ```shell
+  obclient> CREATE TABLE t1_g(id INT,name VARCHAR(18),g GEOMETRY NOT NULL,SPATIAL INDEX t1_g_idx1(g));
+  Query OK, 0 rows affected
+
+  obclient> SHOW INDEX FROM t1_g;
+  +-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  | Table | Non_unique | Key_name  | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible | Expression |
+  +-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  | t1_g  |          1 | t1_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     | NULL       |
+  +-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
+  1 row in set
   ```
 
 * 创建 Hash 分区，分区数为 `8` 的表。
