--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1600.create-index-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1600.create-index-of-oracle-mode.md
@@ -43,7 +43,7 @@ column_name_list:
 |-----------------|------------------------------------------------------------------------------------------------------------------------------------------|
 | index_name      | 指定要创建的索引名称。 |
 | table_name      | 指过索引所属的表名。   |
-| key_part        | 创建（函数）索引。 |
+| key_part        | 定义所创建的索引，目前支持创建唯一索引和函数索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
 | expr            | 表示合法的函数索引表达式，但是不允许是布尔表达式，例如 `c1=c1`。<main id="notice" type='notice'><h4>注意</h4><p> OceanBase 数据库当前版本禁止创建生成列上的函数索引。函数索引所支持的表达式参见 <a href="../../../../../300.database-object-management/200.manage-object-of-oracle-mode/400.manage-indexes-of-oracle-mode/500.function-index-list-of-supported-functions-of-oracle-mode.md"> 函数索引支持的系统函数列表</a>。 </p></main>          |
 | column_name     | 用于创建索引的列名。  |
@@ -78,53 +78,7 @@ column_name_list:
                 TABLE_TYPE: TABLE
                 UNIQUENESS: UNIQUE
                COMPRESSION: ENABLED
-             PREFIX_LENGTH: NULL
-           TABLESPACE_NAME: NULL
-                 INI_TRANS: NULL
-                 MAX_TRANS: NULL
-            INITIAL_EXTENT: NULL
-               NEXT_EXTENT: NULL
-               MIN_EXTENTS: NULL
-               MAX_EXTENTS: NULL
-              PCT_INCREASE: NULL
-             PCT_THRESHOLD: NULL
-            INCLUDE_COLUMN: NULL
-                 FREELISTS: NULL
-           FREELIST_GROUPS: NULL
-                  PCT_FREE: NULL
-                   LOGGING: NULL
-                    BLEVEL: NULL
-               LEAF_BLOCKS: NULL
-             DISTINCT_KEYS: NULL
-   AVG_LEAF_BLOCKS_PER_KEY: NULL
-   AVG_DATA_BLOCKS_PER_KEY: NULL
-         CLUSTERING_FACTOR: NULL
-                    STATUS: VALID
-                  NUM_ROWS: NULL
-               SAMPLE_SIZE: NULL
-             LAST_ANALYZED: NULL
-                    DEGREE: 1
-                 INSTANCES: NULL
-               PARTITIONED: NO
-                 TEMPORARY: NULL
-                 GENERATED: NULL
-                 SECONDARY: NULL
-               BUFFER_POOL: NULL
-               FLASH_CACHE: NULL
-          CELL_FLASH_CACHE: NULL
-                USER_STATS: NULL
-                  DURATION: NULL
-         PCT_DIRECT_ACCESS: NULL
-                ITYP_OWNER: NULL
-                 ITYP_NAME: NULL
-                PARAMETERS: NULL
-              GLOBAL_STATS: NULL
-             DOMIDX_STATUS: NULL
-           DOMIDX_OPSTATUS: NULL
-            FUNCIDX_STATUS: NULL
-                JOIN_INDEX: NO
-   IOT_REDUNDANT_PKEY_ELIM: NULL
-                   DROPPED: NO
+   ...
                 VISIBILITY: VISIBLE
          DOMIDX_MANAGEMENT: NULL
            SEGMENT_CREATED: NULL
@@ -139,53 +93,7 @@ column_name_list:
                 TABLE_TYPE: TABLE
                 UNIQUENESS: NONUNIQUE
                COMPRESSION: ENABLED
-             PREFIX_LENGTH: NULL
-           TABLESPACE_NAME: NULL
-                 INI_TRANS: NULL
-                 MAX_TRANS: NULL
-            INITIAL_EXTENT: NULL
-               NEXT_EXTENT: NULL
-               MIN_EXTENTS: NULL
-               MAX_EXTENTS: NULL
-              PCT_INCREASE: NULL
-             PCT_THRESHOLD: NULL
-            INCLUDE_COLUMN: NULL
-                 FREELISTS: NULL
-           FREELIST_GROUPS: NULL
-                  PCT_FREE: NULL
-                   LOGGING: NULL
-                    BLEVEL: NULL
-               LEAF_BLOCKS: NULL
-             DISTINCT_KEYS: NULL
-   AVG_LEAF_BLOCKS_PER_KEY: NULL
-   AVG_DATA_BLOCKS_PER_KEY: NULL
-         CLUSTERING_FACTOR: NULL
-                    STATUS: VALID
-                  NUM_ROWS: NULL
-               SAMPLE_SIZE: NULL
-             LAST_ANALYZED: NULL
-                    DEGREE: 1
-                 INSTANCES: NULL
-               PARTITIONED: NO
-                 TEMPORARY: NULL
-                 GENERATED: NULL
-                 SECONDARY: NULL
-               BUFFER_POOL: NULL
-               FLASH_CACHE: NULL
-          CELL_FLASH_CACHE: NULL
-                USER_STATS: NULL
-                  DURATION: NULL
-         PCT_DIRECT_ACCESS: NULL
-                ITYP_OWNER: NULL
-                 ITYP_NAME: NULL
-                PARAMETERS: NULL
-              GLOBAL_STATS: NULL
-             DOMIDX_STATUS: NULL
-           DOMIDX_OPSTATUS: NULL
-            FUNCIDX_STATUS: NULL
-                JOIN_INDEX: NO
-   IOT_REDUNDANT_PKEY_ELIM: NULL
-                   DROPPED: NO
+  ...
                 VISIBILITY: VISIBLE
          DOMIDX_MANAGEMENT: NULL
            SEGMENT_CREATED: NULL
@@ -216,53 +124,7 @@ column_name_list:
                TABLE_TYPE: TABLE
                UNIQUENESS: UNIQUE
               COMPRESSION: ENABLED
-            PREFIX_LENGTH: NULL
-          TABLESPACE_NAME: NULL
-                INI_TRANS: NULL
-                MAX_TRANS: NULL
-           INITIAL_EXTENT: NULL
-              NEXT_EXTENT: NULL
-              MIN_EXTENTS: NULL
-              MAX_EXTENTS: NULL
-             PCT_INCREASE: NULL
-            PCT_THRESHOLD: NULL
-           INCLUDE_COLUMN: NULL
-                FREELISTS: NULL
-          FREELIST_GROUPS: NULL
-                 PCT_FREE: NULL
-                  LOGGING: NULL
-                   BLEVEL: NULL
-              LEAF_BLOCKS: NULL
-            DISTINCT_KEYS: NULL
-  AVG_LEAF_BLOCKS_PER_KEY: NULL
-  AVG_DATA_BLOCKS_PER_KEY: NULL
-        CLUSTERING_FACTOR: NULL
-                   STATUS: VALID
-                 NUM_ROWS: NULL
-              SAMPLE_SIZE: NULL
-            LAST_ANALYZED: NULL
-                   DEGREE: 1
-                INSTANCES: NULL
-              PARTITIONED: NO
-                TEMPORARY: NULL
-                GENERATED: NULL
-                SECONDARY: NULL
-              BUFFER_POOL: NULL
-              FLASH_CACHE: NULL
-         CELL_FLASH_CACHE: NULL
-               USER_STATS: NULL
-                 DURATION: NULL
-        PCT_DIRECT_ACCESS: NULL
-               ITYP_OWNER: NULL
-                ITYP_NAME: NULL
-               PARAMETERS: NULL
-             GLOBAL_STATS: NULL
-            DOMIDX_STATUS: NULL
-          DOMIDX_OPSTATUS: NULL
-           FUNCIDX_STATUS: NULL
-               JOIN_INDEX: NO
-  IOT_REDUNDANT_PKEY_ELIM: NULL
-                  DROPPED: NO
+  ...
                VISIBILITY: VISIBLE
         DOMIDX_MANAGEMENT: NULL
           SEGMENT_CREATED: NULL
@@ -277,53 +139,7 @@ column_name_list:
                TABLE_TYPE: TABLE
                UNIQUENESS: UNIQUE
               COMPRESSION: ENABLED
-            PREFIX_LENGTH: NULL
-          TABLESPACE_NAME: NULL
-                INI_TRANS: NULL
-                MAX_TRANS: NULL
-           INITIAL_EXTENT: NULL
-              NEXT_EXTENT: NULL
-              MIN_EXTENTS: NULL
-              MAX_EXTENTS: NULL
-             PCT_INCREASE: NULL
-            PCT_THRESHOLD: NULL
-           INCLUDE_COLUMN: NULL
-                FREELISTS: NULL
-          FREELIST_GROUPS: NULL
-                 PCT_FREE: NULL
-                  LOGGING: NULL
-                   BLEVEL: NULL
-              LEAF_BLOCKS: NULL
-            DISTINCT_KEYS: NULL
-  AVG_LEAF_BLOCKS_PER_KEY: NULL
-  AVG_DATA_BLOCKS_PER_KEY: NULL
-        CLUSTERING_FACTOR: NULL
-                   STATUS: VALID
-                 NUM_ROWS: NULL
-              SAMPLE_SIZE: NULL
-            LAST_ANALYZED: NULL
-                   DEGREE: 1
-                INSTANCES: NULL
-              PARTITIONED: NO
-                TEMPORARY: NULL
-                GENERATED: NULL
-                SECONDARY: NULL
-              BUFFER_POOL: NULL
-              FLASH_CACHE: NULL
-         CELL_FLASH_CACHE: NULL
-               USER_STATS: NULL
-                 DURATION: NULL
-        PCT_DIRECT_ACCESS: NULL
-               ITYP_OWNER: NULL
-                ITYP_NAME: NULL
-               PARAMETERS: NULL
-             GLOBAL_STATS: NULL
-            DOMIDX_STATUS: NULL
-          DOMIDX_OPSTATUS: NULL
-           FUNCIDX_STATUS: NULL
-               JOIN_INDEX: NO
-  IOT_REDUNDANT_PKEY_ELIM: NULL
-                  DROPPED: NO
+  ...
                VISIBILITY: VISIBLE
         DOMIDX_MANAGEMENT: NULL
           SEGMENT_CREATED: NULL
