--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2200.create-index-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2200.create-index-of-mysql-mode.md
@@ -135,7 +135,7 @@ column_name_list:
 * 在 `t1_spa` 表的 `g` 列上创建一个空间索引 `t1_g_idx1`。
   
   ```shell
-  obclient> CREATE TABLE t1_spa(id INT,name VARCHAR(20),g GEOMETRY NOT NULL);
+  obclient> CREATE TABLE t1_spa(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 4326);
   Query OK, 0 rows affected
 
   obclient> CREATE INDEX t1_g_idx1 ON t1_spa(g);
@@ -149,7 +149,7 @@ column_name_list:
   +--------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+------------+
   1 row in set
   ```
-  
+
 * 在 `t1_func` 表上创建一个索引定义是 `c1+c2 < 1` 的函数索引 `i1`。
   
   ```shell
