--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
@@ -199,7 +199,7 @@ partition_count | subpartition_count:
 * 在创建表 `t1_g` 时，同时添加空间索引 `t1_g_idx1`。
 
   ```shell
-  obclient> CREATE TABLE t1_g(id INT,name VARCHAR(18),g GEOMETRY NOT NULL,SPATIAL INDEX t1_g_idx1(g));
+  obclient> CREATE TABLE t1_g(id INT,name VARCHAR(18),g GEOMETRY NOT NULL SRID 4326,SPATIAL INDEX t1_g_idx1(g));
   Query OK, 0 rows affected
 
   obclient> SHOW INDEX FROM t1_g;
