--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/1600.alter-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/1600.alter-table-of-mysql-mode.md
@@ -375,7 +375,7 @@ obclient> DESCRIBE tbl1;
 * 创建表 `t1_spa` 后，在 `g` 列上创建一个空间索引 `t1_g_idx1`。
   
   ```shell
-  obclient> CREATE TABLE t1_spa(id INT,name VARCHAR(20),g GEOMETRY NOT NULL);
+  obclient> CREATE TABLE t1_spa(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 4326);
   Query OK, 0 rows affected
 
   obclient> ALTER TABLE t1_spa ADD SPATIAL INDEX t1_g_idx1(g);
