--- a/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/400.V3.1.1.md
+++ b/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/400.V3.1.1.md
@@ -2,7 +2,9 @@
 
 本文主要介绍 v3.1.1 版本 OceanBase 数据库的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
 
-## 版本新特性 
+## V3.1.1
+
+### 版本新特性 
 
 
 本次迭代版本（v3.1.1），OceanBase 全面提升内核兼容、工具生态、接口开放、备份恢复、开源 OS 支持和易用性能力，持续增强开源产品化应用能力。您可以获得以下关键特性：
@@ -46,9 +48,9 @@
 
 
 
-## 新增功能 
+### 新增功能 
 
-### MySQL 兼容 
+#### MySQL 兼容 
 
 * 适配支持 MySQL 5.7 驱动协议。
 
@@ -77,11 +79,11 @@
 
 
 
-### 高可用性 
+#### 高可用性 
 
 支持物理备份与恢复。物理备份是集群级别的，包括数据全量和增量备份、事务日志近实时备份（秒级别触发）；物理恢复是租户级别的，能恢复到历史任意时间点（几秒之前）。详细信息，参考 [物理备份与恢复概述](https://www.oceanbase.com/docs/community-observer-cn-10000000000014176)。
 
-### 易用性 
+#### 易用性 
 
 * OBD 支持根据系统资源情况自动配置 OceanBase 参数。新增 `obd cluster autodeploy` 命令，支持自动使用最高规格启动 OceanBase 数据库。新增 `obd cluster tenant create/drop` 命令支持创建/删除租户。详细信息，参考 [OBD 创建租户](https://github.com/oceanbase/obdeploy/blob/master/README-CN.md#obd-cluster-tenant-create)。
 
@@ -102,7 +104,7 @@
 
 
 
-### 接口开放 
+#### 接口开放 
 
 * 开源 TABLE API 接口。OceanBase 数据库支持使用 NoSQL 接口访问。TABLE API 接口是表模型和 KV 模型数据的操作接口，定义了客户端和数据库服务端之间的一组通用的交互协议。行操作接口支持 `execute()` 执行单行操作和 `batch_execute()` 执行多行批量操作。支持 `retrieve/get`、`insert_or_update/put`、`delete`、`insert`、`update`、`replace`、`increment` 和 `append` 操作。
 
@@ -115,7 +117,7 @@
 
 
 
-## 社区生态 
+### 社区生态 
 
 * 支持数据同步工具 Canal 和 DataX。支持将数据从 MySQL 迁移到 OceanBase 数据库。支持使用 DataX 向 OceanBase 数据库全量迁移数据。详细信息，参考 [使用 DataX 向 OceanBase 数据库全量迁移数据](https://www.oceanbase.com/docs/community-observer-cn-10000000000013798) 和 [使用 Canal 向 OceanBase 数据库增量迁移数据](https://www.oceanbase.com/docs/community-observer-cn-10000000000013799)。
 
@@ -140,7 +142,7 @@
 
 
 
-## 兼容性变化 
+### 兼容性变化 
 
 
 
@@ -157,7 +159,7 @@
 
 
 
-## Bug修复 
+### Bug 修复 
 
 * 修复聚合函数与别名相同使用报错的问题。对某字段使用聚合函数后，对结果设置成相同字段别名后，使用聚合结果排序必须使用别名，不能使用原来的聚合函数排序。详细信息，参考 [Issue 173](https://github.com/oceanbase/oceanbase/issues/173)。
 
