--- a/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/300.V3.1.2.md
+++ b/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/300.V3.1.2.md
@@ -2,15 +2,17 @@
 
 本文主要介绍 3.1.2 版本 OceanBase 数据库的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
 
-## 概要说明
+## V3.1.2
+
+### 概要说明
 
 在 OceanBase 3.1.2 版本，我们为 OceanBase 数据库的用户提供了免费的图形界面开发者工具（ODC）、运维监控云平台（OCP）、数据迁移工具（OMS）、导数工具（OBLOADER 和 OBDUMPER）。
 
 OceanBase 数据库支持在线跨版本轮转升级，可通过 OBD 指定需要升级到的版本，自动完成最佳升级路径解析和应用升级，全过程无需人工干预且不影响业务运行。优化了热点行数据更新，性能提升了 300%。优化了分区表 SQL PLAN 淘汰机制。优化了底层通信代码等。新增了多个 SQL MODE 和系统函数。
 
-## 特性更新
+### 特性更新
 
-### 开发者中心（ODC）
+#### 开发者中心（ODC）
 
 OceanBase 社区版开发者中心（ODC）是为 OceanBase 数据库量身打造的开发平台。为数据库开发者提供了数据库对象的可视化管理、智能语法、会话管理、回收站管理、导入导出、资源和权限统一管理等多种能力。
 
@@ -32,7 +34,7 @@ ODC 核心功能如下：
 
   ODC 内置管控平台，您可以编辑用户群体的角色和权限，管理连接资源，提升企业协作管理效率。
   
-### 运维监控工具（OCP）
+#### 运维监控工具（OCP）
 
 OceanBase 社区版运维监控工具（OCP）是为 OceanBase 数据库量身打造的企业级数据库集群管理平台工具。您可使用 OCP 管理和运维主机、网络、软件包等资源，管理集群和租户的全生命周期，降低 IT 运维成本。
 
@@ -58,7 +60,7 @@ OCP 的核心功能如下：
 
   OCP 支持创建、修改或删除数据库用户和角色，拥有赋予和回收角色的权限。您可以通过用户中心管理 OCP 用户的个人设置、密码和告警订阅等信息。
   
-### 数据迁移工具（OMS）
+#### 数据迁移工具（OMS）
 
 您可以使用 OceanBase 社区版数据迁移工具（OMS）实现异构数据库与 OceanBase 数据库的数据迁移。OMS 支持将异构数据库在线不停服地迁移至 OceanBase 数据库，同时在应用切换至 OceanBase 数据库后，将 OceanBase 数据库上所有的变更数据实时同步至切换前的源端数据库。您可以使用管理控制台创建数据传输项目、自定义任务配置和监控运维传输组件。
 
@@ -80,7 +82,7 @@ OMS 的核心功能如下：
 
 * 支持运维监控：包括主机监控、组件监控和组件运维。
 
-### 数据导入导出工具（OBLOADER/OBDUMPER）
+#### 数据导入导出工具（OBLOADER/OBDUMPER）
 
 * 您可使用 OBLOADER 和 OBDUMPER 快速导入和导出数据。
 
@@ -88,7 +90,7 @@ OMS 的核心功能如下：
 
 * OBLOADER 和 OBDUMPER 支持按照分区、指定条件、单表、多表、全库、以及自定义查询 SQL 导出，支持数据预处理、字段映射导入，兼容 SQL，CSV、 CUT 等多种文本格式。
 
-### 在线跨版本轮转升级
+#### 在线跨版本轮转升级
 
 您可以通过 `obd cluster upgrade` 命令升级 OceanBase 数据库。OBD 自动识别匹配版本间的升级路径，对每个 Zone 进行轮转升级。具体命令如下：
 
@@ -98,21 +100,21 @@ obd cluster upgrade <deploy name> -c <component name> -V <version> [tags]
 
 参数 `deploy name` 为集群名称，一个集群只能有一个名称，且集群名称不能重复。
 
-### 数据热点行优化
+#### 数据热点行优化
 
 在热点数据更新场景中，OceanBase 数据库通过对 lock for write 加锁逻辑、填充日志前释放行级锁优化，使得 OceanBase 数据库在处理热点数据的并发更新性能从 3000TPS 提升到 9000TPS，提升了热点数据处理能力上限。
 
-### 分区表 SQL PLAN 的淘汰机制优化
+#### 分区表 SQL PLAN 的淘汰机制优化
 
 在分布式场景计划评估中，无法准确获得远端节点分区的行数反馈，存在计划退化的风险。
 
 OceanBase 数据库采用最终 SQL 执行时间反馈负向优化执行计划，当采样的查询平均执行时间超过首次执行时间的 2 倍时，则针对性淘汰该 PLAN 并重新生成新的 SQL PLAN，解决因 SQL PLAN 劣化导致的性能下降问题。
 
-### 通信时钟稳定性优化
+#### 通信时钟稳定性优化
 
 OceanBase 数据库底层通信框架使用 CPU 时钟（SYS_clock_gettime）获取超时时间，而上层 SQL 业务逻辑是使用操作系统时钟（get_timeofday）记录超时时间，这两种时间精度上的误差会有极低概率导致上层业务逻辑重置底层的原始错误码，OceanBase 数据库通过设计可容忍超时误差计算逻辑，准确还原出系统运行报错的第一现场，提升问题分析诊断效率。
 
-### MySQL 兼容
+#### MySQL 兼容
 
 新增支持系统函数：
 
@@ -136,7 +138,7 @@ OceanBase 数据库底层通信框架使用 CPU 时钟（SYS_clock_gettime）获
 
   该函数用来抑制 ONLY_FULL_GROUP_BY 的值被拒绝。
   
-### 其他特性更新
+#### 其他特性更新
 
 * 开源 OBKV TABLE JAVA Client
 
@@ -156,7 +158,7 @@ OceanBase 数据库底层通信框架使用 CPU 时钟（SYS_clock_gettime）获
   
 * 完善 OceanBase 社区版本文档。文档包括架构设计原理、性能调优、故障处理、日常维护指导等。
 
-## 问题修复
+### 问题修复
 
 * 修复 __all_virtual_memory_info 虚拟表因 MEMOEY APPEND 失败导致显示租户信息不全的问题。
 
